# dgltool

./: README.md  flake.nix  projects.toml  pyproject.toml  sample-dgltool.toml
.github/workflows/: build.yml
dgltool/: cli.py  exceptions.py  rc.py  util.py
dgltool/tests/: test_util.py
