[project]
name = "dgltool"
version = "0.0.1"

[tool.setuptools]
packages = ["dgltool"]

[tool.black]
skip-string-normalization = true
line-length = 79

[tool.poetry]
name = "dgltool"
version = "0.0.1"
description = ""
readme = "README.md"
packages = [{include = "dgltool"}]
authors = ["Winston Weinert <hello@winny.tech>"]

[tool.poetry.scripts]
dgltool = "dgltool.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tomlkit = "^0.11.8"
# xdg-base-dirs = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
